<resources>
    <string name="app_name">Тест</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="search">search</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="created">xx.xx.xx</string>
    <string name="nameCart">Новая записка</string>
    <string name="tags">#пусто</string>
    <string name="key">(Сылка)</string>
    <string name="text">Введите текст</string>
    <string name="link_card">Ссылка</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About the app</string>
    <string name="menu_search">Search</string>
    <string name="user_name">Имя пользователя</string>
    <string name="open_nav_drawer">open_nav_drawer</string>
    <string name="close_nav_drawer">close_nav_drawer</string>
    <string name="settings_fragment">Настройки</string>
    <string name="fragment_about">О приложении</string>
    <string name="menu_add_a_note">Add a note</string>
    <string name="menu_delete_a_note">Delete a note</string>
    <string name="to_make_changes">to make changes</string>
    <string name="title_card">Title</string>
    <string name="tag_card">Tag</string>
    <string name="date_card">Date</string>
    <string name="button_cancel">cancel</string>
    <string name="button_save">save</string>
    <string name="new_note">Укажите тег</string>
    <string name="current_note">Новая запись</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnOk">OK</string>
    <string name="textDialog">Подтвердите действие удаления</string>
</resources>