<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_add_a_note"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/menu_add_a_note"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_delete_a_note"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="2"
        android:title="@string/menu_delete_a_note"
        app:showAsAction="always"/>

</menu>