<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zettelkasten_button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button_save"
            android:textSize="@dimen/text_size_20" />

        <Button
            android:id="@+id/zettelkasten_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button_cancel"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

    <EditText
        android:id="@+id/zettelkasten_name_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/nameCart"
        android:textSize="@dimen/text_size_30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/zettelkasten_key_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:hint="@string/key"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:id="@+id/zettelkasten_created_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:hint="@string/created"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/zettelkasten_tags_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:hint="@string/tags"
            android:textSize="@dimen/text_size_20" />

        <EditText
            android:id="@+id/zettelkasten_link_card_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:inputType="number"
            android:hint="@string/key"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>


    <EditText
        android:id="@+id/zettelkasten_text_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_10"
        android:inputType="textMultiLine"
        android:hint="@string/text"
        android:textSize="@dimen/text_size_20" />

</LinearLayout>